@@ -62,6 +62,11 @@ namespace WoopsiUI {
 			u32 coloursInPalette;
 			u32 importantColoursUsed;
 		};
+
+		enum CompressionMethod {
+			COMPRESSION_METHOD_BI_RGB = 0,
+			COMPRESSION_METHOD_BI_BITFIELDS = 3
+		};
 		
 		static void writeBMPHeader(BinaryFile* file, u32 imageSize, u32 offset);
 		
@@ -76,6 +81,15 @@ namespace WoopsiUI {
 		 * @param bmpHeader Header struct to insert information into.
 		 */
 		static void parseBMPHeader(BinaryFile* file, BMPHeader& bmpHeader);
+
+		/**
+		 * Parse the DIB header contained in the supplied file call the correct
+		 * procedure to parse the DIB version.
+		 * @param file File to parse.  Should already be positioned at the
+		 * start of the DIB data.
+		 * @param dibHeader Header struct to insert information into.
+		 */
+		static void parseDIBHeader(BinaryFile* file, DIBV3Header& dibHeader);
 		
 		/**
 		 * Parse the V3 DIB header contained in the supplied file and insert
@@ -106,6 +120,31 @@ namespace WoopsiUI {
 		 * @param bitmap Bitmap to store data in.
 		 */
 		static void parsePixelData24(BinaryFile* file, BMPHeader& bmpHeader, Bitmap* bitmap);
+
+		/**
+		 * Parse the 24-bit pixel data from the supplied file and store it in
+		 * the supplied bitmap.
+		 * @param file File to parse.  Should already be positioned at the
+		 * start of the pixel data.
+		 * @param bmpHeader Previously-extracted BMP header data.
+		 * @param bitmap Bitmap to store data in.
+		 */
+		static void parsePixelData16(BinaryFile* file, BMPHeader& bmpHeader, DIBV3Header& dibHeader, Bitmap* bitmap);
+
+		/**
+		 * Count the number of set bits in the supplied value.
+		 * @param value The value containing the bits to count.
+		 * @return The number of set bits in the value.
+		 */
+		static u8 countSetBits(u32 value);
+
+		/**
+		 * Converts an RGB component from its native bit depth to
+		 * the DS's 5 bits.
+		 * @param component The RGB component to convert.
+		 * @param bits The number of bits in the component.
+		 */
+		static u8 convertTo5Bit(u8 component, u8 bits);
 	};
 }
 
